@@ -1,6 +1,10 @@
 Revision history for Perl extension App::Sqitch
 
 0.954
+     - Removed `-CAS` from the shebang line on Perl 5.10.0. This is to
+       eliminate `Too late for "-CAS" option` errors. This means that UTF-8
+       semantics will be suboptimal on perl 5.10.0. Consider upgrading to 5.12
+       or higher.
 
 0.953  2013-02-21T23:37:57Z
      - Fixed test failure in `t/engine.t` triggered by a clock tick.
